--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -5,7 +5,7 @@
     align-items: center;
     height: 100vh;
     background-color: #f4f7fc;
-    background-image: url('../background.webp'); 
+    background-image: url('../background1.webp'); 
     background-size: cover;
     background-position: center;
     color: #333;
